--- a/kubernetes-security/task03/03-role-admin.yaml
+++ b/kubernetes-security/task03/03-role-admin.yaml
@@ -1,8 +1,10 @@
+---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
+kind: Role
 metadata:
-  name: cluster-pod-reader
+  name: admin
+  namespace: dev
 rules:
-- apiGroups: [""] # "" означает apiGroup под именем core или legacy
-  resources: ["pods"]
-  verbs: ["get", "watch", "list"]
+- apiGroups: ["*"]
+  resources: ["*"]
+  verbs: ["*"]
