--- a/kubernetes-security/task03/04-role-binding-jane.yaml
+++ b/kubernetes-security/task03/04-role-binding-jane.yaml
@@ -1,7 +1,9 @@
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: jane-admin-binding
+  namespace: dev
 subjects:
 - kind: ServiceAccount
   name: jane
@@ -10,3 +12,4 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
   name: admin
+...
