--- a/kubernetes-security/task03/07-role-binding-ken.yaml
+++ b/kubernetes-security/task03/07-role-binding-ken.yaml
@@ -1,7 +1,9 @@
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: ken-view-binding
+  namespace: dev
 subjects:
 - kind: ServiceAccount
   name: ken
@@ -10,3 +12,4 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: view
+...
