--- a/kubernetes-networks/canary/web-ingress-canary.yaml
+++ b/kubernetes-networks/canary/web-ingress-canary.yaml
@@ -1,9 +1,11 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: web
+  name: canary
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/canary: "true"
+    nginx.ingress.kubernetes.io/canary-by-header-value: "canary"
 spec:
   ingressClassName: nginx
   rules:
@@ -13,6 +15,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: web-svc
+            name: canary-svc
             port:
               number: 8000
