--- a/kubernetes-networks/canary/web-ingress-canary.yaml
+++ b/kubernetes-networks/canary/web-ingress-canary.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/canary: "true"
+    nginx.ingress.kubernetes.io/canary-by-header: "release"
     nginx.ingress.kubernetes.io/canary-by-header-value: "canary"
 spec:
   ingressClassName: nginx
