--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -2,9 +2,9 @@ name: Run tests for OTUS homework
 
 on:
   push:
-    branches: kubernetes-dummy*
+    branches: kubernetes-*
   pull_request:
-    branches: kubernetes-dummy*
+    branches: kubernetes-*
 
 jobs:
   test:
